--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </header>
       <div class="section-body">
         <table class="data-table">
-          <thead><tr><th>Date</th><th>Mineur</th><th>Cat.</th><th>Qté</th><th>Coût €</th><th>€/unité</th><th></th></tr></thead>
+          <thead><tr><th>Date</th><th>Mineur</th><th>Catégorie</th><th>Quantité</th><th>Coût total</th><th>Cout unitaire</th><th></th></tr></thead>
           <tbody id="invest-table"></tbody>
         </table>
       </div>
@@ -106,7 +106,7 @@
       </header>
       <div class="section-body">
         <table class="data-table">
-          <thead><tr><th>Date</th><th>Satoshis</th><th>Service GMT</th><th>Élec GMT</th><th></th></tr></thead>
+          <thead><tr><th>Date</th><th>Satoshis</th><th>Électricité</th><th>Service</th><th></th></tr></thead>
           <tbody id="gain-table"></tbody>
         </table>
       </div>
@@ -123,7 +123,7 @@
       </header>
       <div class="section-body">
         <table class="data-table">
-          <thead><tr><th>Date</th><th>Sats vendus</th><th>Montant €</th><th></th></tr></thead>
+          <thead><tr><th>Date</th><th>Satoshis vendus</th><th>Montant</th><th></th></tr></thead>
           <tbody id="sale-table"></tbody>
         </table>
       </div>
