--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>GoMining v3.6</title>
+  <title>GoMining</title>
   <link rel="stylesheet" href="style.css" />
 
   <!-- Litepicker CSS (minimaliste, moderne, très lisible) -->
