--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 
     <div class="section-actions">
       <button id="export-json-btn" class="btn">
-        <span data-feather="upload"></span> Export
+        <span data-feather="upload"></span>
       </button>
       <button id="import-json-btn" class="btn">
-        <span data-feather="download"></span> Import
+        <span data-feather="download"></span>
       </button>
       <button id="reset-db-btn"  class="btn danger">
-        <span data-feather="trash"></span> Vider DB
+        <span data-feather="trash"></span>
       </button>
     </div>
   </header>
