--- a/index.html
+++ b/index.html
@@ -114,11 +114,6 @@
   </div>
 
   <div id="toast" class="toast"></div>
-<script src="js/commun.js" defer></script>
-<script src="js/database.js" defer></script>
-<script src="js/apis.js" defer></script>
-<script src="js/calculs.js" defer></script>
-<script src="js/tuiles.js" defer></script>
-<script src="js/tableaux.js" defer></script>
+  <script src="app.js" defer></script>
 </body>
 </html>
