--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
       </header>
       <div class="section-body">
-        <table class="data-table">
+        <table class="data-table table-capsule">
           <thead><tr><th>Date</th><th>Mineur</th><th>Catégorie</th><th>Quantité</th><th>Coût total</th><th>Coût unitaire</th><th></th></tr></thead>
           <tbody id="invest-table"></tbody>
         </table>
@@ -58,7 +58,7 @@
         </div>
       </header>
       <div class="section-body">
-        <table class="data-table">
+        <table class="data-table table-capsule">
           <thead><tr><th>Date</th><th>Satoshis</th><th>Électricité</th><th>Service</th><th></th></tr></thead>
           <tbody id="gain-table"></tbody>
         </table>
@@ -75,7 +75,7 @@
         </div>
       </header>
       <div class="section-body">
-        <table class="data-table">
+        <table class="data-table table-capsule">
           <thead><tr><th>Date</th><th>Satoshis vendus</th><th>Montant</th><th></th></tr></thead>
           <tbody id="sale-table"></tbody>
         </table>
