--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="rate-tiles" class="tiles"></div>
 
         <!-- Tuiles principales -->
-        <div id="resume-tiles" class="tiles" style="margin-top:16px;"></div>
+        <div id="resume-tiles" class="tiles"></div>
         
         <!-- Tuiles mineurs -->
         <div id="miners-grid" class="miners-grid"></div>
