--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <tr>
               <th class="th-date">Date</th>
               <th class="th-num">Satoshis</th>
-              <th class="th-num">Électricité</th>
-              <th class="th-text">Service</th>
+              <th class="th-num">Électricité GMT</th>
+              <th class="th-num">Service GMT</th>
               <th class="th-action"></th>
             </tr>
           </thead>
